<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:fontFamily="@font/sen"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:fontFamily="@font/palanquin"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:textColor="@color/colorGrey"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="30dp"
        android:paddingStart="10dp"
        android:fontFamily="@font/sen"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:boxStrokeColor="@color/colorSecond">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:fontFamily="@font/sen"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/alertUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAlert"
        android:textSize="12sp"
        android:fontFamily="@font/sen"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:passwordToggleTint="@color/colorAccent"
        app:boxStrokeColor="@color/colorSecond"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/sen"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/alertPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAlert"
        android:textSize="12sp"
        android:fontFamily="@font/sen"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorPrimary"
        android:padding="16dp"
        android:fontFamily="@font/palanquin"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="8dp"
        tools:ignore="UnusedAttribute" />

</LinearLayout>