<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/palanquin"
        tools:ignore="RelativeOverlap"
        android:layout_marginStart="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/greeting"
        android:fontFamily="@font/palanquin"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="157dp"
        android:text="@string/username"
        android:fontFamily="@font/sen"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

    <ImageButton
        android:id="@+id/buttonLogout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_logout"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/logout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/ic_main"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="30dp">

       <RelativeLayout
           android:layout_height="match_parent"
           android:layout_width="match_parent">

           <GridView
               android:id="@+id/gridView"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:numColumns="2"
               android:horizontalSpacing="25dp"
               android:verticalSpacing="10dp"/>

       </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>